--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                 different programming languages such HTML, CSS, Tailwind CSS,
                 React, Git-hub, etc.
 
-                <button class="view">
+                <a href="#" class="view">
                   View courses <img src="img/Icon.svg" alt="" />
-                </button>
+                </a>
               </p>
             </div>
           </div>
@@ -141,9 +141,9 @@
                 different programming languages such HTML, CSS, Tailwind CSS,
                 React, Git-hub, etc.
 
-                <button class="view">
+                <a href="#" class="view">
                   View courses <img src="img/Icon.svg" alt="" />
-                </button>
+                </a>
               </p>
             </div>
           </div>
