--- a/index.html
+++ b/index.html
@@ -15,20 +15,23 @@
       <header>
         <img src="img/bcloud.svg" alt="logo" />
         <ul class="nav">
-          <li>Home</li>
-          <li>Our Services</li>
-          <li>Contact Us</li>
-          <li>Register</li>
+         <a href=""> <li>Home</li></a>
+          <a href=""><li>Our Services</li></a>
+          <a href=""><li>Contact Us</li></a>
+          <a href="register.html" class="ref"><li>Register</li></a>
         </ul>
       </header>
       <hr />
 
-      <div class="hero">
-        
-      </div>
       <div class="welcome">
-        <div></div>
-        <div></div>
+        <div class="main">
+          <div class="vr"> <img src="img/Free Photo _ Portrait young african american man with vr glasses 1.svg" alt=""></div>
+          <h2>Welcome to <span class="cloud">B-CLOUD </span> TECHNOLOGIES  ACADEMY</h2></div>
+      </div>
+
+      <div class="start">
+        <p>Transform your career with our comprehensive Software Development Training</p>
+        <a href="register.html">Register Now <img src="img/Icon.svg" alt=""></a>
       </div>
     </div>
 
