--- a/courses.html
+++ b/courses.html
@@ -1,11 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="courses.css" />
     <title>courses</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="courses">
+      <h2>Our Courses</h2>
+      <div class="course">
+        <div class="frontend">
+          <img src="img/Frame 2147225140@2x.svg" alt="" />
+          <div class="front-end">
+            <img src="img/course.svg" alt="" />
+            <div class="niche">
+              <h3>FRONT-END DEVELOPMENT</h3>
+              <ul>
+                <li>
+                  <h4>HTML</h4>
+                  Start with the fundamentals of web development by mastering
+                  HTML, the building block of the web.
+                </li>
+                <li>
+                  <h4>CSS</h4>
+                  Learn how to style your web pages and create visually
+                  appealing designs using CSS.
+                </li>
+                <li>
+                  <h4>Git/GitHub</h4>
+                  Understand version control and collaboration through Git and
+                  GitHub, essential tools for any developer.
+                </li>
+                <li>
+                  <h4>Tailwind CSS</h4>
+                  Discover how to use this utility-first CSS framework to build
+                  modern, responsive websites efficiently.
+                </li>
+                <li>
+                  <h4>Javascript</h4>
+                  Dive deep into JavaScript, the programming language of the
+                  web. This intensive course will cover everything from basic
+                  concepts to advanced techniques, preparing you to build
+                  interactive, dynamic web applications.
+                </li>
+                <li>
+                  <h4>React</h4>
+                  Master React, a powerful JavaScript library for building user
+                  interfaces. By the final week, you'll start working on your
+                  capstone project, showcasing your skills.
+                </li>
+                <li>
+                  <h4>Final Capstone for front-end Students</h4>
+                  Present your capstone project to your peers and instructors,
+                  culminating in your graduation from the program.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="frontend">
+          <img src="img/blue (2).svg" alt="" />
+          <div class="front-end">
+            <img src="img/course.svg" alt="" />
+            <div class="niche">
+              <h3>BACK-END DEVELOPMENT</h3>
+              <ul>
+                <li>
+                  <h4>Node.js</h4>
+                  Learn server-side programming with Node.js, a powerful
+                  JavaScript runtime built on Chrome's V8 engine. It allows you
+                  to build scalable, high-performance applications by using
+                  JavaScript on both the client and server sides.
+                </li>
+                <li>
+                  <h4>Express</h4>
+                  Explore Express, a minimalist and flexible web framework for
+                  Node.js, designed to build robust web applications and APIs
+                  quickly and easily. You'll learn how to handle routing,
+                  middleware, and more in your web development journey.
+                </li>
+                <li>
+                  <h4>MongoDB</h4>
+                  Get hands-on experience with MongoDB, a NoSQL database known
+                  for its scalability and flexibility. You'll learn how to
+                  store, retrieve, and manipulate data in a document-oriented
+                  database, essential for modern applications.
+                </li>
+                <li>
+                  <h4>Postman</h4>
+                  Understand how to test and interact with APIs using Postman, a
+                  popular tool for API development. You'll learn how to create
+                  and test HTTP requests, analyze responses, and debug your API
+                  interactions efficiently.
+                </li>
+                <li>
+                  <h4>RESTful APIs</h4>
+                  Learn how to design and build RESTful APIs, a crucial part of
+                  modern web development. You'll understand how to create
+                  scalable, stateless APIs that follow REST principles, enabling
+                  communication between the client and server in a structured
+                  and efficient manner.
+                </li>
+                <li>
+                  <h4>Seminars</h4>
+                  Participate in seminars focused on team collaboration, social
+                  media optimization, and job search strategies to further
+                  enhance your career prospects.
+                </li>
+                <li>
+                  <h4>Final Capstone for front-end Students</h4>
+                  Present your capstone project to your peers and instructors,
+                  culminating in your graduation from the program.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
