--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 different programming languages such HTML, CSS, Tailwind CSS,
                 React, Git-hub, etc.
 
-                <a href="#" class="view">
+                <a href="courses.html" class="view">
                   View courses <img src="img/Icon.svg" alt="" />
                 </a>
               </p>
@@ -144,7 +144,7 @@
                 different programming languages such HTML, CSS, Tailwind CSS,
                 React, Git-hub, etc.
 
-                <a href="#" class="view">
+                <a href="courses.html" class="view">
                   View courses <img src="img/Icon.svg" alt="" />
                 </a>
               </p>
