--- a/register.html
+++ b/register.html
@@ -7,8 +7,9 @@
     <title>Registration form</title>
   </head>
   <body>
-    <h1>Registration Form</h1>
+    
     <form class="regForm">
+      <h1>Registration Form</h1>
       <label for="name">Full name*</label>
       <input
         type="text"
@@ -71,19 +72,17 @@
           <li data-value="bsc">Back-end</li>
         </ul>
       </div>
-    </form>
-    <div class="confirm">
-      <div>
-        <input type="checkbox" id="confirm" required />
-        <label for="confirm"
-          >I agree to B-Clouds Terms of service and Privacy policy</label
-        >
-      </div>
+      <div class="confirm">
+        <div>
+          <input type="checkbox" />
+          <p>I agree to B-Clouds Terms of service and Privacy policy</p>
+        </div>
 
-      <button type="submit" class="registerBtn">
-        Register Now <img src="img/Icon.svg" alt="" />
-      </button>
-    </div>
+        <button type="submit" class="registerBtn">
+          Register Now <img src="img/Icon.svg" alt="" />
+        </button>
+      </div>
+    </form>
 
     <div class="success">
       <div class="check">
