--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <title>B-CLOUD TECHNOLOGIES</title>
   </head>
   <body>
-    <div class="header">
+    <div id="header">
       <header>
         <img src="img/bcloud.svg" alt="logo" />
         <div class="burger"> <i class="fa-solid fa-bars "></i></div>
        
         <ul class="nav">
-         <a href=""> <li>Home</li></a>
-          <a href=""><li>Our Services</li></a>
-          <a href=""><li>Contact Us</li></a>
+         <a href="#header"> <li>Home</li></a>
+          <a href="#courses"><li>Our Services</li></a>
+          <a href="#footer"><li>Contact Us</li></a>
           <a href="register.html" class="ref"><li>Register</li></a>
         </ul>
       </header>
@@ -125,7 +125,7 @@
       </div>
     </div>
 
-    <div class="courses">
+    <div id="courses">
       <h1>Explore Our Courses</h1>
       <div class="line">
         <div class="frame">
@@ -283,7 +283,7 @@
       </p>
     </div>
 
-    <div class="footer">
+    <div id="footer">
       <div class="top">
         <div class="leftt">
           <h3>Front-end: ₦220,000</h3>
@@ -358,12 +358,38 @@
         </div>
       </footer>
       <div class="links">
-        <ul class="links">
-            <a href=""> <li>Home</li></a>
-        <a href=""><li>Our Services</li></a>
-        <a href=""><li>Contact Us</li></a>
-        <a href="register.html"><li>Register</li></a>
+        <button class="cancel">&times;</button>
+        <ul>
+          <ul>
+            <li><a href="#header">Home</a></li>
+            <li><a href="#courses">Our Services</a></li>
+            <li><a href="#footer">Contact Us</a></li>
+            <li><a href="register.html">Register</a></li>
         </ul>
       </div>
+      <script >
+        const menuToggle = document.querySelector('.burger');
+const links = document.querySelector('.links');
+const cancel = document.querySelector('.cancel');
+
+
+if (menuToggle) {
+  console.log("Button found!");
+} else {
+  console.error("Button not found!");
+}
+
+
+menuToggle.addEventListener('click', () => {
+  console.log("Menu button clicked!");
+  links.classList.toggle('show-menu');
+});
+
+cancel.addEventListener('click', () => {
+  console.log("Cancel button clicked!");
+  links.classList.remove('show-menu');
+});
+
+      </script>
   </body>
 </html>
